# kpexec

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  kpexec_wrangler_prefix_mvp_spec.md
docs/: cli-design.md  milestones.md  security-design.md
implementation_phases/: README.md  phase-01-cli-config-foundation.md  phase-02-keychain-keepass-read-path.md  phase-03-policy-matcher-dry-run.md  phase-04-telegram-approval.md  phase-05-output-redaction.md  phase-06-wrangler-execution.md  phase-07-demo-doctor-validation.md
spikes/: README.md
spikes/kdbx-roundtrip/: Cargo.toml
spikes/kdbx-roundtrip/src/: main.rs
spikes/keychain-acl/: kcprobe.swift  run-tests.sh
spikes/local-auth/: laprobe.swift  run-tests.sh
spikes/signing/: notarize.sh  sign.sh
src/: cli.rs  cmd_check.rs  cmd_entry.rs  cmd_init.rs  cmd_run.rs  commands.rs  config.rs  doctor.rs  error.rs  keychain.rs  lib.rs  lock.rs  logging.rs  main.rs  masterpw.rs  output.rs  paths.rs  pin.rs  policy.rs  prompt.rs  secret.rs  status.rs  vault.rs  vaultctx.rs
tests/: cli_smoke.rs  redaction.rs  run_path.rs  vault_lifecycle.rs
