[package]
name = "kpexec"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "Broker secrets into policy-shaped child processes from a dedicated KeePass vault."
license = "GPL-3.0-only"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6.0"
sha2 = "0.10"
keepass = { version = "0.13.13", features = ["save_kdbx4"] }
secrecy = "0.10"
zeroize = "1"
rpassword = "7"
shell-words = "1"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
# Direct SIGTERM delivery for the graceful-then-forceful timeout (std's
# Child::kill only sends SIGKILL). Unix-only; the run path is macOS/Unix.
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
# Keep the tree honest against the never-log rules and deny-by-default posture.
all = { level = "warn", priority = -1 }
